# aoc22

./: .gitignore  Cargo.toml
day1/: q1  q1.rs  q2  q2.rs
day2/: q1.rs  q2.rs
day3/: q1  q1.rs  q2.rs
day4/: q1  q1.rs  q2  q2.rs
day5/: q1  q1.rs  q2  q2.rs
day6/: q1  q1.rs  q2  q2.rs
day7/: q1  q1.rs
